Mejoras de paginación, filtros y serialización
- Agrega endpoints paginados (/page) y filtros server-side para compras y desperdicios.

- Optimiza combos evitando N+1 y normaliza respuesta vacía.

- Evita ciclos JSON en movimientos de caja devolviendo DTO de listado.

- Ajustes de frontend: paginación/filtros, websocket y mejoras de tablas.

- Externaliza credenciales de correo vía variables de entorno.

Made-with: Cursor